<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Just Java 2.0</string>
    <string name="input_hint">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">Order Summary</string>
    <string name="order">Order</string>
    <string name="quantity_error_100">You have reach the limit of coffee</string>
    <string name="quantity_error_0">You cannot order less than one coffee</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="order_summary_whipped_cream">Has whipped cream? <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
    <string name="order_summary_chocolate">Has chocolate? <xliff:g id="addWhippedChocolate" example="true">%b</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>
    <string name="order_summary_price">Total: <xliff:g id="totalPrice" example="$10">%d</xliff:g></string>
    <string name="euro"> €</string>
    <string name="thank_you">Thank you!</string>
    <string name="order_summary_subject">JustJava order for <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="no_name_error">Please, enter your name</string>

</resources>
